--- a/xpi/content/css/oldsearch.css
+++ b/xpi/content/css/oldsearch.css
@@ -129,4 +129,15 @@
 	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree > .autocomplete-treebody {
 	  margin-bottom: -4px !important;
 	}
+	
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree .autocomplete-treebody::-moz-tree-cell(fromhistory),
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree .autocomplete-treebody::-moz-tree-cell-text(fromhistory){
+	  opacity: .4 !important;
+	}
+
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree .autocomplete-treebody::-moz-tree-cell(fromhistory,selected),
+	#main-window[fx52plus="true"] #PopupSearchAutoComplete .search-panel-tree .autocomplete-treebody::-moz-tree-cell-text(fromhistory,selected){
+	  opacity: 1.0 !important;
+	}
+	
 }
