--- a/xpi/content/css/mode_txtonly.css
+++ b/xpi/content/css/mode_txtonly.css
@@ -115,4 +115,14 @@
 	  display: -moz-box !important;
 	}
 	
+	/*LastPass*/
+	#navigator-toolbox toolbar:not(#TabsToolbar) #lpt_lastpass-compact-btn:not(.tabs-newtab-button):not(.tab-close-button) .toolbarbutton-text,
+	#ctraddon_addon-bar #lpt_lastpass-compact-btn:not(.tabs-newtab-button):not(.tab-close-button) .toolbarbutton-text	{
+	  display: -moz-box !important;
+	}
+
+	#navigator-toolbox toolbar:not(#TabsToolbar) #lpt_lastpass-compact-btn	{
+      padding-top: 5px !important;
+	}
+	
 }
