--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -299,6 +299,11 @@
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/appbutton_menuPanel.png);
 	}
 	
+	#main-window[fx52plus="true"] #ctraddon_appbutton[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+	#main-window[fx52plus="true"] toolbarpaletteitem[place="palette"] > #ctraddon_appbutton > .toolbarbutton-icon{
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/appbutton_menuPanel.svg);
+	}
+
 	#ctraddon_panelui-button[cui-areatype="menu-panel"] #PanelUI-menu-button > .toolbarbutton-icon,
 	toolbarpaletteitem[place="palette"] > #ctraddon_panelui-button {
 	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/menuPanel2.png"),
@@ -318,6 +323,14 @@
 	  -moz-image-region: rect(0px, 96px, 32px, 64px);
 	  list-style-image: url(chrome://browser/skin/menuPanel.png);
 	}
+	
+	#main-window[defaultfxtheme="true"][fx52plus="true"]  #ctraddon_stop-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+	#main-window[defaultfxtheme="true"][fx52plus="true"]  toolbarpaletteitem[place="palette"] > #ctraddon_stop-button > .toolbarbutton-icon,
+	#main-window[fx52plus="true"] #ctraddon_stop-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+	#main-window[fx52plus="true"] toolbarpaletteitem[place="palette"] > #ctraddon_stop-button > .toolbarbutton-icon {
+	  -moz-image-region: rect(0px, 96px, 32px, 64px);
+	  list-style-image: url(chrome://browser/skin/menuPanel.svg);
+	}
 
 	#main-window[defaultfxtheme="true"] #ctraddon_reload-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
 	#main-window[defaultfxtheme="true"] toolbarpaletteitem[place="palette"] > #ctraddon_reload-button > .toolbarbutton-icon,
@@ -325,6 +338,14 @@
 	toolbarpaletteitem[place="palette"] > #ctraddon_reload-button > .toolbarbutton-icon{
 	  -moz-image-region: rect(0px, 64px, 32px, 32px);
 	  list-style-image: url(chrome://browser/skin/menuPanel.png);
+	}
+	
+	#main-window[defaultfxtheme="true"][fx52plus="true"] #ctraddon_reload-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+	#main-window[defaultfxtheme="true"][fx52plus="true"] toolbarpaletteitem[place="palette"] > #ctraddon_reload-button > .toolbarbutton-icon,
+	#main-window[fx52plus="true"] #ctraddon_reload-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
+	#main-window[fx52plus="true"] toolbarpaletteitem[place="palette"] > #ctraddon_reload-button > .toolbarbutton-icon{
+	  -moz-image-region: rect(0px, 64px, 32px, 32px);
+	  list-style-image: url(chrome://browser/skin/menuPanel.svg);
 	}
 
 	#main-window[defaultfxtheme="true"] #ctraddon_go-button[cui-areatype="menu-panel"] > .toolbarbutton-icon,
