--- a/xpi/content/css/alt_autocomplete.css
+++ b/xpi/content/css/alt_autocomplete.css
@@ -15,15 +15,27 @@
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings.xml#autocomplete-richlistitem") !important;
 	}
 	
-	/* Firefox 50 beta2+ popup code (50b1 not supported anymore) */
+	/* Firefox 50 popup code (50b1 not supported anymore) */
 	#main-window[fx50plus="true"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete),
 	#main-window[fx50plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] {
+	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings50.xml#urlbar-rich-result-popup") !important;
+	}
+
+	/* Firefox 50 richlist item code (50b1 not supported anymore) */
+	#main-window[fx50plus="true"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) .autocomplete-richlistitem,
+	#main-window[fx50plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem {
+	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings50.xml#autocomplete-richlistitem") !important;
+	}
+	
+	/* Firefox 51 popup code */
+	#main-window[fx51plus="true"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete),
+	#main-window[fx51plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings51.xml#urlbar-rich-result-popup") !important;
 	}
 
-	/* Firefox 50 beta2+ richlist item code (50b1 not supported anymore) */
-	#main-window[fx50plus="true"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) .autocomplete-richlistitem,
-	#main-window[fx50plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem {
+	/* Firefox 51 richlist item code */
+	#main-window[fx51plus="true"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) .autocomplete-richlistitem,
+	#main-window[fx51plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .autocomplete-richlistitem {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings51.xml#autocomplete-richlistitem") !important;
 	}
 
@@ -85,8 +97,8 @@
 	  display: block !important;
 	}
 	
-	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) .search-one-offs,
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .search-one-offs {
+	#main-window:not([fx51plus="true"]) panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) .search-one-offs,
+	#main-window:not([fx51plus="true"]) #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] .search-one-offs {
 	  visibility: collapse !important;
 	  display: none !important;
 	}
