--- a/xpi/content/css/autocompl_no_title2.css
+++ b/xpi/content/css/autocompl_no_title2.css
@@ -9,9 +9,15 @@
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings.xml#urlbar-rich-result-popup") !important;
 	}
 	
-	/* Firefox 50 beta2+ popup code (50b1 not supported anymore) */
+	/* Firefox 50 popup code (50b1 not supported anymore) */
 	#main-window[fx50plus="true"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete),
 	#main-window[fx50plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] {
+	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings50.xml#urlbar-rich-result-popup") !important;
+	}
+	
+	/* Firefox 51 */
+	#main-window[fx51plus="true"] panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete),
+	#main-window[fx51plus="true"] #PopupAutoCompleteRichResult[autocompleteinput="urlbar"] {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/urlbarBindings51.xml#urlbar-rich-result-popup") !important;
 	}
 	
