--- a/xpi/content/css/tabs_squared2c2.css
+++ b/xpi/content/css/tabs_squared2c2.css
@@ -266,6 +266,7 @@
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
+	#ctraddon_pw_square_edges,
 	#ctraddon_ccap_t_squared2{
 	  visibility: visible !important;
 	}
