--- a/xpi/content/css/tabs_squaredc2.css
+++ b/xpi/content/css/tabs_squaredc2.css
@@ -272,6 +272,7 @@
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
+	#ctraddon_pw_square_edges,
 	.tabcolorbox,
 	.tabhovcolorbox,
 	.tabpencolorbox,
