--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -108,7 +108,7 @@
 radio.ctraddontab {
   -moz-appearance: none;
   margin: 0;
-  padding: 1px;
+  padding: 5px 0;
   border: solid 1px transparent;
 }
 
