--- a/xpi/content/css/mac/back-forwardextra.css
+++ b/xpi/content/css/mac/back-forwardextra.css
@@ -2,7 +2,7 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
+	#main-window[fx50plus="true"][defaultfxtheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
 	  margin-inline-start: -6px !important;
 	}
 
@@ -28,8 +28,8 @@
 	  transition: none !important;
 	}
 	
-	#main-window * toolbar #urlbar-container ,
-	#main-window * toolbar #urlbar-container[forwarddisabled]  {
+	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container ,
+	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled]  {
 	  -moz-margin-start: 8px !important;
 	}
 
