--- a/xpi/content/css/mac/smallnavbutextra.css
+++ b/xpi/content/css/mac/smallnavbutextra.css
@@ -117,7 +117,7 @@
                   0 0 2px hsla(210,54%,20%,.1) !important;
 	}
 
-	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
+	#main-window[fx50plus="true"][defaultfxtheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
 	  margin-inline-start: -6px !important;
 	}
 	
@@ -135,8 +135,8 @@
 	  transition-delay: 0s !important;
 	}
 
-	#urlbar-container,
-	#urlbar-container[forwarddisabled] {
+	window:not([chromehidden~="toolbar"]) #urlbar-container,
+	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 4px !important;
 	}
 	
