--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -1,6 +1,6 @@
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-	#main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
+	#main-window[fx50plus="true"][defaultfxtheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
 	  margin-inline-start: -6px !important;
 	}
 
@@ -35,8 +35,8 @@
 	  }
 	}
 	
-    #nav-bar #urlbar-container,
-	#nav-bar #urlbar-container[forwarddisabled] {
+    #main-window:not([chromehidden~="toolbar"]) #nav-bar #urlbar-container,
+	#main-window:not([chromehidden~="toolbar"]) #nav-bar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 2px !important;
 	}
 	
