--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -35,8 +35,8 @@
 	  }
 	}
 	
-    #main-window:not([chromehidden~="toolbar"]) #nav-bar #urlbar-container,
-	#main-window:not([chromehidden~="toolbar"]) #nav-bar #urlbar-container[forwarddisabled] {
+    #nav-bar #urlbar-container,
+	#nav-bar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 2px !important;
 	}
 	
