--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -18,8 +18,8 @@
 	  transition-delay: 0s !important;
 	}
 
-	window:not([chromehidden~="toolbar"]) #nav-bar #urlbar-container,
-	window:not([chromehidden~="toolbar"]) #nav-bar #urlbar-container[forwarddisabled] {
+	#nav-bar #urlbar-container,
+	#nav-bar #urlbar-container[forwarddisabled] {
 	  margin-left: 1px !important;
 	}
 	
