--- a/xpi/content/css/close_icon_g_w7v2.css
+++ b/xpi/content/css/close_icon_g_w7v2.css
@@ -10,6 +10,18 @@
 *:not(#TabsToolbar):not(.tab-content) > .close-icon:hover:active {
   -moz-image-region: rect(0, 48px, 16px, 32px) !important;
 }
+@media (min-resolution: 1.1dppx) {
+  *:not(#TabsToolbar):not(.tab-content) > .close-icon {
+	list-style-image: url("chrome://classic_theme_restorer/content/images/close_w7v2_2x.png") !important;
+	-moz-image-region: rect(0, 32px, 32px, 0) !important;
+  }
+  *:not(#TabsToolbar):not(.tab-content) > .close-icon:hover {
+	-moz-image-region: rect(0, 64px, 32px, 32px) !important;
+  }
+  *:not(#TabsToolbar):not(.tab-content) > .close-icon:hover:active {
+	-moz-image-region: rect(0, 96px, 32px, 64px) !important;
+  }
+}
 *:not(#TabsToolbar):not(.tab-content) > .close-icon > .toolbarbutton-icon {
   width: 16px !important;
 }
