--- a/xpi/content/css/close_icon_t_w10red.css
+++ b/xpi/content/css/close_icon_t_w10red.css
@@ -17,6 +17,24 @@
 	  -moz-image-region: rect(0, 60px, 20px, 40px) !important;
 	}
 	
+	@media (min-resolution: 1.1dppx) {
+	  #main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button,
+	  #navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton) {
+		list-style-image: url("chrome://classic_theme_restorer/content/images/close_w10red_2x.png") !important;
+		-moz-image-region: rect(0, 40px, 40px, 0) !important;
+	  }
+
+	  #main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button:hover,
+	  #navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton):hover {
+		-moz-image-region: rect(0, 80px, 40px, 40px) !important;
+	  }
+
+	  #main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button:hover:active,
+	  #navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton):hover:active {
+		-moz-image-region: rect(0, 120px, 40px, 80px) !important;
+	  }
+	}
+	
 	#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button{
 	  opacity: 1.0 !important;
 	}
