--- a/xpi/content/css/close_icon_t_w7v2.css
+++ b/xpi/content/css/close_icon_t_w7v2.css
@@ -17,6 +17,24 @@
 	  -moz-image-region: rect(0, 48px, 16px, 32px) !important;
 	}
 	
+	@media (min-resolution: 1.1dppx) {
+	  #main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button,
+	  #navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton) {
+		list-style-image: url("chrome://classic_theme_restorer/content/images/close_w7v2_2x.png") !important;
+		-moz-image-region: rect(0, 32px, 32px, 0) !important;
+	  }
+
+	  #main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button:hover,
+	  #navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton):hover {
+		-moz-image-region: rect(0, 64px, 32px, 32px) !important;
+	  }
+
+	  #main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button:hover:active,
+	  #navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton):hover:active {
+		-moz-image-region: rect(0, 96px, 32px, 64px) !important;
+	  }
+	}
+	
 	#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([selected]):not(:hover) .tab-close-button{
 	  opacity: .7 !important;
 	}
