--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -563,7 +563,8 @@ radio.ctraddontab .radio-check-box1 {
 #ctraddon_pw_altoptions_default label,
 #ctraddon_pw_options_alt label,
 #ctraddon_pw_options_alt2 label,
-#ctraddon_pw_options_alt3 label{
+#ctraddon_pw_options_alt3 label,
+#ctraddon_pw_options_alt4 label{
   background:url('chrome://classic_theme_restorer/content/images/prefs_incontent.png') no-repeat left  !important;
   padding-left:20px !important;
   min-height:16px !important;
@@ -726,6 +727,10 @@ radio.ctraddontab .radio-check-box1 {
 #ctraddon_closeicon_def {
   -moz-margin-end:0;
 }
+#ctraddon_pw_tabthrobber_def{
+  list-style-image:url('chrome://global/skin/icons/loading.png');
+}
+
 #ctraddon_pw_tabthrobber_alt {
   list-style-image:url('chrome://classic_theme_restorer/content/images/throbber-loading-alt.png');
 }
