--- a/xpi/content/css/alt_autocompl_items2.css
+++ b/xpi/content/css/alt_autocompl_items2.css
@@ -6,12 +6,16 @@
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="visiturl"],
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine heuristic"],
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine heuristic"],
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine"],
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[type="autofill heuristic"],
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"],
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="visiturl"] *,
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="visiturl"] *,
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine heuristic"] *,
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine heuristic"] *,
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine"] *,
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine"] *,
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[type="autofill heuristic"] *,
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"] * {
 	  min-height: 0 !important;
@@ -24,6 +28,8 @@
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="visiturl"] + richlistitem:not([collapse="true"]),
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine heuristic"] + richlistitem:not([collapse="true"]),
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine heuristic"] + richlistitem:not([collapse="true"]),
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[actiontype="searchengine"][originaltype="action searchengine"] + richlistitem:not([collapse="true"]),
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[actiontype="searchengine"][originaltype="action searchengine"] + richlistitem:not([collapse="true"]),
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete) richlistitem[type="autofill heuristic"] + richlistitem:not([collapse="true"]),
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"] richlistitem[type="autofill heuristic"] + richlistitem:not([collapse="true"]) {
 	  border-top: 1px solid transparent !important;
@@ -41,7 +47,13 @@
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete)[ctrsubboxstyle="height: 2px;"],
 	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"][ctrsubboxstyle="height: 2px;"],
 	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete)[ctrsubboxstyle="height: 8px;"],
-	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"][ctrsubboxstyle="height: 8px;"] {
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"][ctrsubboxstyle="height: 8px;"],
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete)[ctrsubboxstyle="height: 42px;"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"][ctrsubboxstyle="height: 42px;"],
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete)[ctrsubboxstyle="height: 45px;"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"][ctrsubboxstyle="height: 45px;"],
+	panel[type="autocomplete-richlistbox"]:not(#PopupAutoComplete)[ctrsubboxstyle="height: 49px;"],
+	#PopupAutoCompleteRichResult[autocompleteinput="urlbar"][ctrsubboxstyle="height: 49px;"] {
       margin-left: -10000000000px !important;
 	}
 }
