--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -740,6 +740,9 @@ radio.ctraddontab .radio-check-box1 {
 #ctraddon_pw_tabthrobber_nav{
   list-style-image:url('chrome://classic_theme_restorer/content/images/throbber_loading.png');
 }
+#ctraddon_pw_tabthrobber_ub{
+  list-style-image:url('chrome://classic_theme_restorer/content/images/throbber-loading-ubuntu.png');
+}
 
 #ctraddon_pw_tabthrobber_alt,
 #ctraddon_pw_tabthrobber_f39,
