--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -27,7 +27,7 @@
 	}
 	
 	@media (-moz-os-version: windows-win10) {
-	  #main-window[fx50plus="true"][defaultfxtheme="true"] #forward-button[disabled="true"] + #urlbar #identity-icon {
+	  #main-window[fx50plus="true"][defaultfxtheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
 		margin-inline-start: -9px !important;
 	  }
 	  #main-window:not([fx50plus="true"])[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
