--- a/xpi/content/css/ib_graycolor.css
+++ b/xpi/content/css/ib_graycolor.css
@@ -42,5 +42,12 @@
 	#main-window[fx50plus="true"] #urlbar-wrapper #urlbar[pageproxystate="invalid"]  :-moz-any(.urlbar-input-box, #urlbar-display-box) {
 	  border-image: unset !important;
 	}
+	
+	@media (-moz-os-version: windows-win10) {
+		.urlbar-textbox-container {
+		  margin-top: -1px !important;
+		  margin-bottom: -1px !important;
+		}
+	}
 
 }
