--- a/xpi/content/css/alt_optionspage2.css
+++ b/xpi/content/css/alt_optionspage2.css
@@ -26,7 +26,7 @@
 	
 	#dialogBox {
 	  min-width: unset !important;
-	  min-height: unset !important;
+	  /*min-height: unset !important;*/
 	}
 
 	/* main colors category items */
