--- a/xpi/content/css/alt_optionswindow.css
+++ b/xpi/content/css/alt_optionswindow.css
@@ -71,7 +71,7 @@
 	
 	#dialogBox {
 	  min-width: unset !important;
-	  min-height: unset !important;
+	  /*min-height: unset !important;*/
 	}
 
 	@media (min-resolution: 1.1dppx) {
