--- a/xpi/content/css/alt_optionswindow_ct.css
+++ b/xpi/content/css/alt_optionswindow_ct.css
@@ -98,7 +98,7 @@
 	
 	#dialogBox {
 	  min-width: unset !important;
-	  min-height: unset !important;
+	  /*min-height: unset !important;*/
 	}
 	
 
