--- a/xpi/content/css/mac/overlayprefs_extra.css
+++ b/xpi/content/css/mac/overlayprefs_extra.css
@@ -10,6 +10,14 @@
   visibility: visible !important;
 }
 
+#ClassicTRoptionsPane tabpanels {
+  padding: 10px 0 0 0 !important;
+}
+#ClassicTRoptionsPane groupbox {
+  margin-top: 2px !important;
+  margin-bottom: 2px !important;
+}
+
 #ctraddon_pw_menubargroup,
 #ctraddon_pw_menubarnofog,
 #ctraddon_pw_altmenubar,
