--- a/xpi/content/css/alt_addonsmanager.css
+++ b/xpi/content/css/alt_addonsmanager.css
@@ -31,8 +31,9 @@
 	
 	#addons-page .alert {
 	  box-shadow: 2px 2px 2px rgba(200,200,200,0.5) !important;
+	  padding: 0px !important;
 	}
-
+	
 	/* main colors category items */
 	#addons-page button.sorter[checked="true"],
 	#addons-page #categories .category[selected]{
