--- a/xpi/content/css/linux/back-forwardextra.css
+++ b/xpi/content/css/linux/back-forwardextra.css
@@ -20,6 +20,9 @@
 	#main-window[fx50plus="true"][defaultfxtheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
 	  margin-inline-start: -6px !important;
 	}
+	#main-window[fx50plus="true"][defaultfxtheme="true"][developertheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
+	  margin-inline-start: 0px !important;
+	}
 		
 	#main-window:not([fx50plus="true"])[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 6px !important;
@@ -50,6 +53,10 @@
 	window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
 	window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 4px !important;
+	}
+	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+	  -moz-margin-start: 3px !important;
 	}
 
 }
