--- a/xpi/content/css/win8/back-forwardextra.css
+++ b/xpi/content/css/win8/back-forwardextra.css
@@ -5,6 +5,9 @@
 	#main-window[fx50plus="true"][defaultfxtheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
 	  margin-inline-start: -6px !important;
 	}
+	#main-window[fx50plus="true"][defaultfxtheme="true"][developertheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
+	  margin-inline-start: 0px !important;
+	}
 	
 	#main-window:not([fx50plus="true"]):not([defaultfxtheme="true"]) #notification-popup-box[hidden] + *,
 	#main-window:not([fx50plus="true"]):not([defaultfxtheme="true"]) #notification-popup-box + .notification-anchor-icon {
@@ -32,6 +35,9 @@
 	@media (-moz-os-version: windows-win10) {
 	  #main-window[fx50plus="true"][defaultfxtheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
 		margin-inline-start: -9px !important;
+	  }
+	  #main-window[fx50plus="true"][defaultfxtheme="true"][developertheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
+		margin-inline-start: 0px !important;
 	  }
 	  #main-window:not([fx50plus="true"])[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
 		-moz-padding-start: 4px !important;
@@ -105,11 +111,19 @@
 	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 10px !important;
 	}
+	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+	  -moz-margin-start: 3px !important;
+	}
 
 	@media (-moz-os-version: windows-win10) {
 		#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
 		#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 		  -moz-margin-start: 12px !important;
+		}
+		#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+		#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+		  -moz-margin-start: 3px !important;
 		}
 	}
 
