--- a/xpi/content/css/winxp/back-forwardextra.css
+++ b/xpi/content/css/winxp/back-forwardextra.css
@@ -5,6 +5,9 @@
 	#main-window[fx50plus="true"][defaultfxtheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
 	  margin-inline-start: -6px !important;
 	}
+	#main-window[fx50plus="true"][defaultfxtheme="true"][developertheme="true"]:not([chromehidden~="toolbar"]) #forward-button[disabled="true"] + #urlbar #identity-icon {
+	  margin-inline-start: 0px !important;
+	}
 	
 	#main-window:not([fx50plus="true"]):not([defaultfxtheme="true"]) #notification-popup-box[hidden] + *,
 	#main-window:not([fx50plus="true"]):not([defaultfxtheme="true"]) #notification-popup-box + .notification-anchor-icon {
@@ -59,5 +62,9 @@
 	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
 	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 8px !important;
+	}
+	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+	  -moz-margin-start: 3px !important;
 	}
 }
